[package]
name = "media-tweak"
version = "0.1.0"
edition = "2024"

[dependencies]
ffmpeg-next = "8.0.0"
iced = { version = "*", features = ["image"] }
rfd = "0.17.2"
tokio = { version = "1.44.2", features = ["fs", "io-util", "process"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # accessability
    "a11y",

    # Use the cosmic-settings-daemon for config handling on Linux targets
    "dbus-config",

    # async runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",

    "multi-window",
]
default-features = false
